--- a/DesafioNotas/app/src/main/res/values/colors.xml
+++ b/DesafioNotas/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="Primary">#FF6600</color>
+    <color name="PrimaryVariant">#983D00</color>
+    <color name="Secondary">#C39900</color>
+    <color name="SecondaryVariant">#B17B0B</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="FondoNotaSeleccionada">#92FF4D</color>
