--- a/DesafioNotas/app/src/main/res/values/colors.xml
+++ b/DesafioNotas/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="SecondaryVariant">#B17B0B</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="FondoNotaSeleccionada">#92FF4D</color>
+    <color name="FondoNotaSeleccionada">#983D00</color>
     <color name="FondoNota">#F8E77B</color>
 </resources>
