Diferenciado el tipo de nota en el recycler

--- a/DesafioNotas/app/src/main/res/layout/notas_list.xml
+++ b/DesafioNotas/app/src/main/res/layout/notas_list.xml
@@ -29,6 +29,17 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
+            android:id="@+id/txtTipoNota"
+            style="@style/txtHoras"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/txtHoraRecycler"
+            app:layout_constraintStart_toEndOf="@+id/txtAsuntoNotaRecycler"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
             android:id="@+id/txtHoraRecycler"
             style="@style/txtHoras"
             android:layout_width="wrap_content"
