--- a/DesafioNotas/app/src/main/res/values/themes.xml
+++ b/DesafioNotas/app/src/main/res/values/themes.xml
@@ -13,10 +13,27 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
     <style name="txtAsuntos" parent="Theme.DesafioNotas">
         <item name="android:textSize">18dp</item>
     </style>
+
     <style name="txtHoras" parent="Theme.DesafioNotas">
         <item name="android:textSize">14dp</item>
+    </style>
+
+    <style name="InputText" parent="Theme.DesafioNotas">
+        <item name="android:textSize">18dp</item>
+    </style>
+
+    <style name="textModFechaHoraDetalle" parent="txtHoras">
+        <item name="android:textColor">#757474</item>
+    </style>
+
+    <style name="imgButton" parent="Theme.DesafioNotas">
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:background">@android:color/transparent</item>
     </style>
 </resources>
