--- a/DesafioNotas/app/src/main/res/layout/tarea_creater.xml
+++ b/DesafioNotas/app/src/main/res/layout/tarea_creater.xml
@@ -17,5 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
