--- a/DesafioNotas/app/src/main/res/values-night/themes.xml
+++ b/DesafioNotas/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="txtTareaNoRealizada" parent="Theme.DesafioNotas">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">normal</item>
+    </style>
 </resources>
