Mejorada la diferencia visual entre tipos de nota

--- a/DesafioNotas/app/src/main/res/layout/activity_detalle_notas.xml
+++ b/DesafioNotas/app/src/main/res/layout/activity_detalle_notas.xml
@@ -25,7 +25,8 @@
             android:layout_marginStart="20dp"
             android:ems="10"
             android:hint="@string/strTituloAsunto"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:maxLength="26" />
 
         <ImageButton
             android:id="@+id/btnCompartirNota"
