--- a/DesafioNotas/app/src/main/res/values-night/themes.xml
+++ b/DesafioNotas/app/src/main/res/values-night/themes.xml
@@ -17,4 +17,9 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">normal</item>
     </style>
+    <style name="inicialContacto" parent="Theme.DesafioNotas">
+        <item name="android:background">@color/gris_oscuro</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">18dp</item>
+    </style>
 </resources>
