--- a/DesafioNotas/app/src/main/res/layout/tareas_list.xml
+++ b/DesafioNotas/app/src/main/res/layout/tareas_list.xml
@@ -12,6 +12,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:backgroundTint="@android:color/darker_gray"
         app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +26,6 @@
             style="@style/imgButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/darker_gray"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +33,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/divider3"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@android:drawable/btn_dialog" />
+            app:srcCompat="@drawable/tarea_default" />
     </androidx.cardview.widget.CardView>
 
     <TextView
@@ -61,7 +61,7 @@
         app:layout_constraintStart_toEndOf="@+id/txtTarea"
         app:layout_constraintTop_toTopOf="@+id/txtTarea"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_baseline_check_24" />
+        app:srcCompat="@drawable/check" />
 
     <View
         android:id="@+id/divider3"
