--- a/DesafioNotas/app/src/main/res/values/colors.xml
+++ b/DesafioNotas/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="FondoNota">#F8E77B</color>
     <color name="gris_oscuro">#787878</color>
     <color name="gris_claro">#E4E4E4</color>
+    <color name="itemSelected">#854D4D4D</color>
 </resources>
