--- a/DesafioNotas/app/src/main/res/values/themes.xml
+++ b/DesafioNotas/app/src/main/res/values/themes.xml
@@ -15,7 +15,7 @@
     </style>
     <style name="launcher" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@mipmap/ic_launcher</item>
-        <item name="colorPrimaryDark">@android:color/white</item>
+        <item name="colorPrimaryDark">@color/PrimaryVariant</item>
     </style>
     <style name="txtAsuntos" parent="Theme.DesafioNotas">
         <item name="android:textSize">18dp</item>
