--- a/DesafioNotas/app/src/main/res/values-night/themes.xml
+++ b/DesafioNotas/app/src/main/res/values-night/themes.xml
@@ -22,4 +22,7 @@
         <item name="android:gravity">center</item>
         <item name="android:textSize">18dp</item>
     </style>
+    <style name="textoNota.color" parent="textoNota">
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
