--- a/DesafioNotas/app/src/main/res/values/themes.xml
+++ b/DesafioNotas/app/src/main/res/values/themes.xml
@@ -54,4 +54,15 @@
         <item name="android:gravity">center</item>
         <item name="android:textSize">18dp</item>
     </style>
+    <style name="textoNota" parent="Theme.DesafioNotas">
+        <item name="android:background">@drawable/plantilla</item>
+        <item name="android:backgroundTint">#8A8686</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:gravity">start|top</item>
+        <item name="android:textSize">20dp</item>
+    </style>
+    <style name="textoNota.color" parent="textoNota">
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
